# github-actions-lab6-tvu115-fcris002

./: CMakeLists.txt
.github/workflows/: main.yml
header/: passing_test.hpp  rectangle.hpp  test.hpp
src/: rectangle.cpp
tests/: test.cpp
